--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
   <meta charset="utf-8">
   <title>Mars colonization structures</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/master.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 
   <h1>Mars colonization structures</h1>
   <ul>
-    <li>Space bubbles</li>
-    <li>Super domes</li>
-    <li>Mecha-stilts</li>
+    <li>
+      <h2>Space bubbles</h2>
+    </li>
+    <li>
+      <h2>Super domes</h2>
+    </li>
+    <li>
+      <h2>Mecha-stilts</h2>
+    </li>
   </ul>
 
 </body>
