--- a/index.html
+++ b/index.html
@@ -5,21 +5,39 @@
   <title>Mars colonization structures</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <h1>Mars colonization structures</h1>
-  <ul>
-    <li>
-      <h2>Space bubbles</h2>
-    </li>
-    <li>
-      <h2>Super domes</h2>
-    </li>
-    <li>
-      <h2>Mecha-stilts</h2>
-    </li>
-  </ul>
+  <section>
+    <h2>Mars colonization structures</h2>
+    <article>
+      <i class="icon">
+          <svg><use xlink:href="images/mars-icons.svg#space-bubbles"></use></svg>
+        </i>
+      <h3>Space bubbles</h3>
+      <p>Space bubbled buildings will house large green houses and natural habitats so Earth-borne life can live on Mars.</p>
+      <a href="#">Learn about space bubbles</a>
+    </article>
+
+    <article>
+      <i class="icon">
+          <svg><use xlink:href="images/mars-icons.svg#super-domes"></use></svg>
+        </i>
+      <h3>Super domes</h3>
+      <p>Super domes are the large, climate controlled city habitats that future human beings will live, work and play in.</p>
+      <a href="#">Learn about super domes</a>
+    </article>
+
+    <article>
+      <i class="icon">
+          <svg><use xlink:href="images/mars-icons.svg#mecha-stilts"></use></svg>
+        </i>
+      <h3>Mecha-stilts</h3>
+      <p>Mecha-stilts are primarily used for science and research—the builds are mobile and self-contained for the most versatility.</p>
+      <a href="#">Learn about mecha-stilts</a>
+    </article>
+  </section>
 
 </body>
 </html>
